--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Descripcion -->
+    <meta
+      name="description"
+      content="La casa del Búho, el mejor lugar para tomar café y compartir con amigos o familia, deliciosas recetas caseras y los mejores tipos de café seleccionado. ¿Que esperas para venir?"
+    />
+    <!-- Palabras Clave -->
+    <meta
+      name="keywords"
+      content="desayunos, café tostado, medialunas, delivery, la casa del Búho, recetas caseras, ofertas especiales, promociones, pedi tu receta favorita, submarinos, pedidos a domicilio"
+    />
     <!-- Librería Font Awesome link -->
     <link
       rel="stylesheet"
@@ -55,13 +66,7 @@
           <i class="fas fa-mug-hot"></i> café
         </a>
         <h3>comenzá un nuevo gran día</h3>
-        <input
-          type="email"
-          name=""
-          placeholder="email"
-          id=""
-          class="box"
-        />
+        <input type="email" name="" placeholder="email" id="" class="box" />
         <input
           type="password"
           name=""
@@ -374,12 +379,19 @@
           </div>
           <form action="" class="col-md-6">
             <h3>contáctanos</h3>
-            <input type="text" placeholder="nombre" class="box">
-            <input type="email" placeholder="email" class="box">
-            <input type="number" placeholder="teléfono" class="box">
-            <textarea name="" placeholder="mensaje" class="box" id="" cols="30" rows="10"></textarea>
-            <input type="submit" value="enviar mensaje" class="link-btn">
-         </form>
+            <input type="text" placeholder="nombre" class="box" />
+            <input type="email" placeholder="email" class="box" />
+            <input type="number" placeholder="teléfono" class="box" />
+            <textarea
+              name=""
+              placeholder="mensaje"
+              class="box"
+              id=""
+              cols="30"
+              rows="10"
+            ></textarea>
+            <input type="submit" value="enviar mensaje" class="link-btn" />
+          </form>
         </div>
       </div>
     </section>
@@ -398,7 +410,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Mollitia, veniam!
             </p>
-            <a href="" class="link-btn">leer más</a>
+            <a href="#" class="link-btn">leer más</a>
           </div>
           <div class="icons">
             <span> <i class="fas fa-calendar"></i> 21 mayo, 2022</span>
